--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -36,5 +36,5 @@ runs:
           packages/*/lib
           packages/*-theme/**/*.js
           packages/*-theme/**/*.css
-        key: ${{ runner.os }}-build-${{ github.sha }}
-        restore-keys: ${{ runner.os }}-build-${{ github.sha }}
+        key: ${{ runner.os }}-build-browserstack-clear-tasks
+        restore-keys: ${{ runner.os }}-build-browserstack-clear-tasks
