--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: Test
-on: [pull_request] # Triggers on any branch
+on: [push] # Triggers on any branch
 env:
   BASE_SHA: ${{ github.event.pull_request.base.sha }}
   USE_BROWSERSTACK: ${{ secrets.USE_BROWSERSTACK }}
@@ -31,25 +31,10 @@ jobs:
 
       - name: Build
         if: steps.setup.outputs.cache-build-hit != 'true'
-        run: npm run build:affected -- --base=$BASE_SHA
-
-  lint:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Setup resources and environment
-        uses: ./.github/actions/setup
-
-      - name: Lint
-        run: npm run lint:affected -- --base=$BASE_SHA
+        run: npm run build
 
   test:
-    needs: lint
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -61,7 +46,7 @@ jobs:
         uses: ./.github/actions/run-test
         with:
           browsers: 'default'
-          base: $BASE_SHA
-          browserstack: $USE_BROWSERSTACK
+          mode: 'all'
+          browserstack: true
           username: $BROWSERSTACK_USERNAME
           access-key: $BROWSERSTACK_ACCESS_KEY
