--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test
-on: [pull_request] # Triggers on any branch
+on: [push] # Triggers on any branch
 env:
-  BASE_SHA: ${{ github.event.pull_request.base.sha }}
+  BASE_SHA: "68bf16afb9b1457350b939d8454ccb23ad24f332"
   USE_BROWSERSTACK: ${{ secrets.USE_BROWSERSTACK }}
   BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
   BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
