feat(color-picker): add a11y color utils

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -45,10 +45,12 @@
     "build": "tsc --sourceMap --declarationMap",
     "build:prod": "tsc",
     "prepack": "npm run version",
-    "version": "node ../../scripts/version"
+    "version": "node ../../scripts/version",
+    "test": "npm run build && karma start ../../karma.config.js --package=utils"
   },
   "dependencies": {
     "@types/d3-color": "^3.0.2",
+    "colord": "^2.9.3",
     "d3-color": "^3.0.1",
     "tslib": "^2.3.1"
   },
